# awesome-gamedev

./: .gitignore  README.md  README_Backup.md  gitsync.sh
Img/: lumen.drawio  未命名绘图.drawio
demo/: Main.md  ReadMe.md
demo/CPPDemo/: CMakeLists.txt
demo/CPPDemo/clang/: main1.cpp
demo/CPPDemo/src/001_Struct_to_Class/: main.cpp
demo/CPPDemo/src/002_Return_Value_Optimize_RVO/: main.cpp
demo/CPPDemo/src/003_Extract/: main.cpp
demo/CPPDemo/src/004_Count_of_Array/: main.cpp
demo/CPPDemo/src/006_compile_option_WXwd/: main.cpp
demo/CPPDemo/src/007_STL/: main.cpp
demo/CPPDemo/src/007_STL_EMPTY_BACK/: main.cpp
demo/CPPDemo/src/008_MultiThread/: main.cpp
demo/CPPDemo/src/009_CPPReflection/: main.cpp
demo/CPPDemo/src/010_CPPTemplate_Use/: main.cpp
demo/CPPDemo/src/011_Template_ArrayLength/: main.cpp
demo/CPPDemo/src/012_Rand/: main.cpp
demo/CPPDemo/src/013_MoveConstruct/: main.cpp
demo/CPPDemo/src/014_Type/: main.cpp
demo/CPPDemo/src/015_TemplateArgs/: main.cpp
demo/CPPDemo/src/016_octree/: FVector.h  main.cpp
demo/CPPDemo/src/020_CPP20_coroutine/: main.cpp
demo/CPPDemo/src/030_Bit_Calculate/: main.cpp
demo/CPPDemo/src/031_SIMD/: main.cpp
demo/CPPDemo/src/032_Std_move/: main.cpp
demo/CPPDemo/src/101_Template_SFINAE/: main.cpp
demo/CPPDemo/src/4_Count_of_Array/: main.cpp
demo/CPPDemo/src/5_fwritefread/: main.cpp
demo/CPPDemo/src/901_NXMath/: HWriteRead.hpp  main.cpp
demo/CPPDemo/src/999_Test/: TestTemplate.cpp  TestTemplate.h  main.cpp  main1.cpp  std_shared_ptr_swap_thread_safe.cpp  std_watcher.cpp  std_watcher.h
(+7589 files in other folders)
